--- a/Portfolio-Website-master/index.html
+++ b/Portfolio-Website-master/index.html
@@ -756,7 +756,7 @@ engineering and contribute to impactful projects.
 
           <div class="footer__socials">
             <a
-              href="https://www.instagram.com/kashyap_05_/"
+              href="https://www.instagram.com/_.tarun_arora?igsh=MTY0bzR0OWJncjRheg=="
               class="footer__social"
               target="__blank"
             >
