--- a/Portfolio-Website-master/index.html
+++ b/Portfolio-Website-master/index.html
@@ -124,7 +124,7 @@
                 Computer Science Engineering Student
               </h3>
               <p class="home__description">
-                A third-year undergraduate engineering student at
+                A final year undergraduate engineering student at
                 <strong>Chandigarh University </strong>, Punjab.
               </p>
               <a href="#contact" class="button button--flex">
