--- a/Portfolio-Website-master/index.html
+++ b/Portfolio-Website-master/index.html
@@ -624,14 +624,14 @@ engineering and contribute to impactful projects.
                    Designed a responsive UI, improving accessibility across 100+ devices during testing
                 </p>
                 <a
-                  href="https://github.com/arora-tarun/weather-website-basic.git"
+                  href="https://github.com/arora-tarun/SwiftWeather-website-by-Tarun/blob/main/index.html"
                   class="button button--flex button--small portfolio__button"
                 >
                   GitHub Repository
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://weather-website-basic.vercel.app/"
+                  href="https://swift-weather-website-by-tarun.vercel.app/"
                   class="button button--flex button--small portfolio__button"
                 >
                   See Live
@@ -748,10 +748,10 @@ engineering and contribute to impactful projects.
               <a href="#qualification" class="footer__link">Qualification</a>
             </li>
             <li>
-              <a href="#portfolio" class="footer__link">Portfolio</a>
+              <a href="#portfolio" class="footer__link">Projects</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contact-Me</a>
+              <a href="#contact" class="footer__link">Contact</a>
             </li>
           </ul>
 
